<resources>
    <string name="app_name">NewsApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_category">Categories</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="item">Item</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="HintUsername">Username</string>
    <string name="HintPassword">Password</string>
    <string name="ButtonLogin">Login</string>
    <string name="ForgotPassword">Would you like to reset your password?</string>

    <string name="username">admin</string>
    <string name="password">admin</string>
    <string name="login_preference">com.news.newsapp_login_preference</string>
    <string name="login_status_preference">com.news.newsapp_login_status_preference</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HintTitle">Title</string>
    <string name="HintContent">Content</string>
    <string name="btnSave">Save</string>
    <string name="rbActive">Active</string>
    <string name="rbPassive">Passive</string>
    <string name="news_add">News Add</string>
    <string name="itemNewsList">Tüm Haberler</string>
    <string name="itemLogout">Çıkış Yap</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="nav_news_list">Haberler</string>
    <string name="menu_news_list">Haberler</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btnUser">KULLANICILAR</string>
    <string name="btnNews">HABERLER</string>
    <string name="btnFiles">DOSYALAR</string>
    <string name="btnSettings">AYARLAR</string>
    <string name="btnLogout">ÇIKIŞ YAP</string>
    <string name="action_search">ARA</string>
    <string name="fabAdd">Add</string>
    <string name="btnUpdate">Update</string>
    <string name="title_activity_file_add">FileAddActivity</string>
    <string name="fabFileAdd">fabFileAdd</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>